# bundestagswahl-2025

./: README.md  app.py  pyproject.toml
.streamlit/: config.toml
components/: direct_candidates_vs_seats.py  legal.py  map.py  overview.py  results.py
results/: btw25_bewerb_utf8.csv  kerg2_00044.csv  kerg2_00225.csv  kerg2_00245.csv  kerg2_00269.csv  kerg2_00284.csv
shapefiles/: btw25_geometrie_wahlkreise_shp_geo.shp.xml
utils/: data_loader.py  seats.py  utils.py
